fix(frontend): prevent vscrolled table columns from wrapping

--- a/server/frontend/src/style.css
+++ b/server/frontend/src/style.css
@@ -233,6 +233,12 @@
     display: flex;
     flex-flow: column;
     align-items: flex-start;
+
+    * {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
   }
 
   .field> :deep(span) {
